# Traced-Span-Collector-Rust

./: .env.example  .gitignore  Makefile  README.md  TRADEOFFS.md  docker-compose.yml  run_full_test.ps1  start_all.ps1
dashboard/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/nginx/: nginx.conf
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/components/: ScatterChart.tsx  TraceDetail.tsx
emitter/: Cargo.toml  Dockerfile
emitter/src/: generator.rs  main.rs  models.rs  verifier.rs
server/: Cargo.toml  Dockerfile
server/src/: handlers.rs  main.rs  models.rs  storage.rs
spec/: openapi.yaml
